--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,11 +11,11 @@
       justify-content: space-between;
     }
   </style>
-  
+
 </head>
 
 <body>
-  <div>
+  <div class="navbar">
     <div><a href="/">Home</a></div>
     <div><a href="/dice/2/6">2d6</a></div>
     <div><a href="/dice/2/10">2d10</a></div>
